tests/checker/bad/bad_cast_2.scilla
scilla_version 0

library CastLib

contract CastContract ()

transition CastTest()
  (* Casts to non-ByStr20 not allowed *)
  x = 0x1234567890123456789012345678901234567890;
  v <-& x as Uint128
end
